# web-server

./: CMakeLists.txt  LICENSE  README.md  Server.c  Server.h  args_parser.c  args_parser.h  defines.h  file_utils.c  file_utils.h  main.c  net_utils.c  net_utils.h  request_handler.c  request_handler.h  request_parser.c  request_parser.h  response.c  response.h  servUtil.c  servUtil.h  server.c  server.h  server_utils.c  server_utils.h  test.c
server/: defines.h
server/arguments/: args.c  args.h  args_parser.c  args_parser.h
server/config/: config.c  config_parser.c  config_parser.h
server/core/: server.c
server/logger/: log_defines.h  logger.c  logger.h
server/request/: request_handler.c  request_handler.h  request_parser.c
server/response/: response_handler.c
server/utils/: file_utils.c  file_utils.h  net_utils.c  net_utils.h
testWeb/: 404.html  index.html  script.js  test.html  test1.html
